Primeros cambios Tracker

--- a/MonkeyDelivery/MonkeyDelivery.vcxproj
+++ b/MonkeyDelivery/MonkeyDelivery.vcxproj
@@ -259,6 +259,10 @@
     <ClInclude Include="Src\sdlutils\SoundEffect.h" />
     <ClInclude Include="Src\sdlutils\TextureUtils.h" />
     <ClInclude Include="Src\sdlutils\VirtualTimer.h" />
+    <ClInclude Include="Src\Tracker\Persistence.h" />
+    <ClInclude Include="Src\Tracker\Serializer.h" />
+    <ClInclude Include="Src\Tracker\Tracker.h" />
+    <ClInclude Include="Src\Tracker\TrackerEvent.h" />
     <ClInclude Include="Src\Utils\Particles\ParticleExample.h" />
     <ClInclude Include="Src\Utils\Particles\ParticleSystem.h" />
     <ClInclude Include="Src\Utils\Singleton.h" />
@@ -362,6 +366,10 @@
     <ClCompile Include="Src\sdlutils\SDLUtils.cpp" />
     <ClCompile Include="Src\sdlutils\SoundEffect.cpp" />
     <ClCompile Include="Src\sdlutils\TextureUtils.cpp" />
+    <ClCompile Include="Src\Tracker\Persistence.cpp" />
+    <ClCompile Include="Src\Tracker\Serializer.cpp" />
+    <ClCompile Include="Src\Tracker\Tracker.cpp" />
+    <ClCompile Include="Src\Tracker\TrackerEvent.cpp" />
     <ClCompile Include="Src\Utils\Particles\ParticleExample.cpp" />
     <ClCompile Include="Src\Utils\Particles\ParticleSystem.cpp" />
     <ClCompile Include="Src\Utils\Timer.cpp" />
