--- a/MonkeyDelivery/MonkeyDelivery.vcxproj
+++ b/MonkeyDelivery/MonkeyDelivery.vcxproj
@@ -259,6 +259,7 @@
     <ClInclude Include="Src\sdlutils\SoundEffect.h" />
     <ClInclude Include="Src\sdlutils\TextureUtils.h" />
     <ClInclude Include="Src\sdlutils\VirtualTimer.h" />
+    <ClInclude Include="Src\Tracker\EventFactory.h" />
     <ClInclude Include="Src\Tracker\Persistence.h" />
     <ClInclude Include="Src\Tracker\Serializer.h" />
     <ClInclude Include="Src\Tracker\Tracker.h" />
@@ -366,6 +367,7 @@
     <ClCompile Include="Src\sdlutils\SDLUtils.cpp" />
     <ClCompile Include="Src\sdlutils\SoundEffect.cpp" />
     <ClCompile Include="Src\sdlutils\TextureUtils.cpp" />
+    <ClCompile Include="Src\Tracker\EventFactory.cpp" />
     <ClCompile Include="Src\Tracker\Persistence.cpp" />
     <ClCompile Include="Src\Tracker\Serializer.cpp" />
     <ClCompile Include="Src\Tracker\Tracker.cpp" />
