--- a/MonkeyDelivery/MonkeyDelivery.vcxproj.filters
+++ b/MonkeyDelivery/MonkeyDelivery.vcxproj.filters
@@ -296,6 +296,9 @@
     <ClCompile Include="Src\Tracker\TrackerEvent.cpp">
       <Filter>Source\Tracker</Filter>
     </ClCompile>
+    <ClCompile Include="Src\Tracker\EventFactory.cpp">
+      <Filter>Source\Tracker</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MonkeyDelivery.h" />
@@ -669,6 +672,9 @@
       <Filter>Header\Tracker</Filter>
     </ClInclude>
     <ClInclude Include="Src\Tracker\TrackerEvent.h">
+      <Filter>Header\Tracker</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\Tracker\EventFactory.h">
       <Filter>Header\Tracker</Filter>
     </ClInclude>
   </ItemGroup>
