--- a/MonkeyDelivery/MonkeyDelivery.vcxproj.filters
+++ b/MonkeyDelivery/MonkeyDelivery.vcxproj.filters
@@ -299,6 +299,9 @@
     <ClCompile Include="Src\Tracker\EventFactory.cpp">
       <Filter>Source\Tracker</Filter>
     </ClCompile>
+    <ClCompile Include="Src\Tracker\SessionStartEvent.cpp">
+      <Filter>Source\Tracker</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MonkeyDelivery.h" />
@@ -675,6 +678,9 @@
       <Filter>Header\Tracker</Filter>
     </ClInclude>
     <ClInclude Include="Src\Tracker\EventFactory.h">
+      <Filter>Header\Tracker</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\Tracker\SessionStartEvent.h">
       <Filter>Header\Tracker</Filter>
     </ClInclude>
   </ItemGroup>
